[package]
name        = "private_proof_of_reserve_cli"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "CLI tool that generates and verifies private proof-of-reserve ZK proofs for Bitcoin holdings."

[dependencies]
# CLI / UX
clap        = { version = "4.5", features = ["derive"] }
indicatif   = "0.17"

# Bitcoin & RPC
bitcoin          = "0.31"
bitcoincore-rpc  = "0.18"

# Crypto primitives
bulletproofs     = { version = "4.0", optional = true }
curve25519-dalek = "4.2"
rand             = "0.8"
merkletree       = "0.7"
sha2             = "0.10"
hex              = "0.4"
base64           = "0.21"

# Serde / error handling
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"

[features]
default              = ["bulletproofs-backend"]
bulletproofs-backend = ["bulletproofs"]
halo2-backend        = []              # placeholder for future

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"