[package]
name    = "private_proof_of_reserve_cli"
version = "0.1.0"
edition = "2021"

# ────────────────────────── Dependencies ──────────────────────────
[dependencies]
# CLI / UX
clap        = { version = "4.5", features = ["derive"] }
indicatif   = "0.17"

# Bitcoin & RPC
bitcoin         = "0.31"
bitcoincore-rpc = "0.18"

# Crypto primitives
bulletproofs        = { version = "4.0", optional = true }
curve25519-dalek-ng = "4.1"
rand                = "0.8"
merlin              = "3.0"

# Hash / misc
sha2   = "0.10"
hex    = "0.4"
base64 = "0.21"

# Serde / error handling
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"

[features]
default              = ["bulletproofs-backend"]
bulletproofs-backend = ["bulletproofs"]
